2008-10-29  Thijs Vermeir  <thijsvermeir@gmail.com>

	* vapi/packages/gdk-2.0/gdk-2.0.metadata:

	Hide gdk_window_add_filter.data

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:

	use ctype GCallback for gtk_action_group_add_radio_actions

	* vapi/gdk-2.0.vapi:
	* vapi/gtk+-2.0.vapi:

	Regenerate bindings

2008-10-28  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/libgnome-menu/:

	Fix GMenuTreeItem binding
	
	* vapi/*.vapi:

	Regenerate bindings

2008-10-28  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala:

	Don't sort struct fields in vapi files to fix struct
	initialization, patch by Hans Vercammen

2008-10-27  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala:
	* gobject/valaccodegenerator.vala:
	* compiler/valacompiler.vala:

	Disable additional run-time checks by default to improve
	performance

2008-10-27  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodemethodmodule.vala:

	Remove unused method

2008-10-27  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraylengthfield.vala:
	* vala/valaarraymovemethod.vala:
	* vala/valaarrayresizemethod.vala:
	* vala/valablock.vala:
	* vala/valaclass.vala:
	* vala/valaconstant.vala:
	* vala/valaconstructor.vala:
	* vala/valacreationmethod.vala:
	* vala/valadelegate.vala:
	* vala/valadestructor.vala:
	* vala/valadynamicmethod.vala:
	* vala/valadynamicproperty.vala:
	* vala/valadynamicsignal.vala:
	* vala/valaenum.vala:
	* vala/valaenumvalue.vala:
	* vala/valaerrorcode.vala:
	* vala/valaerrordomain.vala:
	* vala/valafield.vala:
	* vala/valaforeachstatement.vala:
	* vala/valaformalparameter.vala:
	* vala/valainterface.vala:
	* vala/valalocalvariable.vala:
	* vala/valamember.vala:
	* vala/valamethod.vala:
	* vala/valanamespace.vala:
	* vala/valaobjecttypesymbol.vala:
	* vala/valaproperty.vala:
	* vala/valasignal.vala:
	* vala/valastruct.vala:
	* vala/valaswitchsection.vala:
	* vala/valasymbol.vala:
	* vala/valatypeparameter.vala:
	* vala/valatypesymbol.vala:
